@@ -1,876 +1,173 @@
-import net.silver.buildsrc.BuildMeta
-import org.gradle.api.tasks.bundling.Jar
-import org.gradle.api.artifacts.ProjectDependency
-import java.io.ByteArrayOutputStream
-import java.io.File
-import java.util.zip.ZipFile
-
-// =========================================================================
-// == GLOBAL UTILITIES (OS AGNOSTIC) =======================================
-// =========================================================================
-
-/**
- * Dynamically determines the executable name with the correct OS extension.
- * @param baseName The name of the tool (e.g., "jlink", "jpackage").
- * @return The full executable path within the JDK bin directory.
- */
-fun getJvmExecutable(baseName: String): String {
-    val osName = System.getProperty("os.name").lowercase()
-    val exeExtension = if (osName.contains("windows")) ".exe" else ""
-    return listOf(BuildMeta.JDK_LOCATION, "bin", "$baseName$exeExtension").joinToString(File.separator)
-}
-
-/**
- * Check if a JAR file contains module-info.class
- */
-fun File.isModularJar(): Boolean {
-    if (!exists() || !isFile || !name.endsWith(".jar")) return false
-    return try {
-        ZipFile(this).use { zip ->
-            zip.getEntry("module-info.class") != null
-        }
-    } catch (e: Exception) {
-        false
-    }
-}
+import org.gradle.plugins.ide.idea.model.IdeaLanguageLevel
+import net.silver.buildsrc.BuildMeta;
 
 
 // --- PLUGINS ---
 plugins {
-    application
+    java
+    idea
+    id("org.javamodularity.moduleplugin") version "2.0.0"
+    id("org.openjfx.javafxplugin") version "0.1.0"
+    id("org.beryx.jlink") version "3.1.4-rc"
+
+//    id("com.github.ben-manes.versions") version "0.53.0"
+//    id("com.dorongold.task-tree") version "4.0.1"
+//    id("com.osacky.doctor") version "0.12.1"
 }
 
 apply(from = "gradle/myScripts/globalManifest.gradle.kts")
 
 allprojects {
+
     // Global group (each module overrides if needed)
     group = BuildMeta.MAIN_GROUP
     version = BuildMeta.VERSION_PARTIAL_NO_BUILD_NUMBER
     layout.buildDirectory.set(file(BuildMeta.Paths.OUTPUT_BUILD_DIR + project.name))
-    apply(plugin = "java-library")
-}
 
+}
 subprojects {
+    apply(plugin = "java")
     apply(from = rootDir.resolve("gradle/myScripts/downloadSourcesAndJavadoc.gradle.kts"))
 
     java {
+        modularity.inferModulePath.set(true)
         toolchain {
             languageVersion = JavaLanguageVersion.of(BuildMeta.JAVA_VERSION)
             vendor.set(JvmVendorSpec.MICROSOFT) // Microsoft JDK
             implementation.set(JvmImplementation.VENDOR_SPECIFIC)
         }
+        modularity.inferModulePath.set(true)
     }
-
     /**
-     * Classic Javadoc task configuration
+     * Classic Javadoc task configuration (this affects BOTH:
+     *  - the HTML docs in build/docs/javadoc
+     *  - the generated javadoc JAR)
      */
     tasks.javadoc {
         val opts = options as StandardJavadocDocletOptions
 
+        // disable strict JavaDoc checking
         opts.addStringOption("Xdoclint:none", "-quiet")
+
         opts.encoding = "UTF-8"
         opts.memberLevel = JavadocMemberLevel.PUBLIC
 
+        // Gradle 8/9 compliant path
         destinationDir = layout.buildDirectory
             .dir("docs/javadoc")
             .get()
             .asFile
     }
 }
-// --- VARIABLES FOR NATIVE TASKS ---
-val runtimeImageDir = layout.buildDirectory.dir("runtime_image")
-val appModulesDir = layout.buildDirectory.dir("app_modules")
-val mergedJarsDir = layout.buildDirectory.dir("merged_jars_dir")
-val mergedModuleJarName = "${BuildMeta.MAIN_MODULE}.merged.module-${project.version}.jar"
-val resolvedRuntimeClasspath by lazy { configurations.runtimeClasspath.get().files }
+
+
+//test frameworks
+
+
+val jdkLocation: String = System.getProperty("org.gradle.java.home") ?: System.getenv("JAVA_HOME") ?: ""
+
+
+idea {
+    project {
+        languageLevel = IdeaLanguageLevel(BuildMeta.JAVA_VERSION)
+        // Use the project JDK (instead of Gradle JVM)
+        jdkName = BuildMeta.JAVA_VERSION.toString()
+        vcs = "Git"
+    }
+    module {
+        isDownloadSources = true // defaults to false
+        isDownloadJavadoc = true
+        inheritOutputDirs = false
+//        outputDir = BuildMeta.Paths.IDEA_OUTPUT
+//        testOutputDir = ideaTest
+        excludeDirs = excludeDirs + listOf(
+            file("out"),
+            file("build"),
+            file(".gradle")
+        )
+    }
+}
+
+
 dependencies {
+    // SQLite, MySQL, HikariCP, SLF4J
+//    implementation("org.xerial:sqlite-jdbc:3.50.3.0")
+
+//    implementation("org.slf4j:slf4j-api:2.0.17")
     // Modules of Project
-    implementation(project(":App"))
-    implementation(project(":Config"))
-    implementation(project(":Gui"))
     implementation(project(":Logging"))
-    implementation(project(":Persistence"))
-    implementation(project(":Resources"))
-    implementation(project(":Services"))
     implementation(project(":Utils"))
+    implementation(project(":Persistence"))
+    implementation(project(":App"))
+    implementation(project(":Gui"))
+    implementation(project(":Resources"))
 
-    implementation(BuildMeta.Libs.SLF4J)
-
-    testImplementation(BuildMeta.Libs.JUNIT_API)
-    testImplementation(BuildMeta.Libs.JUNIT_JUPITER)
-    testRuntimeOnly(BuildMeta.Libs.JUNIT_PLATFORM)
+    testImplementation(BuildMeta.Libs.JUNIT_API)// JUnit 5 API for compiling tests
+    testImplementation(BuildMeta.Libs.JUNIT_JUPITER)// JUnit 5 Engine for running tests (runtime only)
+    testRuntimeOnly(BuildMeta.Libs.JUNIT_PLATFORM)    // Critical for modular projects – allows Gradle to launch tests correctly
 }
 
-// =========================================================================
-// == NATIVE JPACKAGE SETUP TASKS (Optimized) ==============================
-// =========================================================================
-
-/**
- * 1. Merged Module JAR (Resolves MySQL/Automatic Module and Duplication Errors)
- */
-tasks.register<Jar>("createMergedModuleJar") {
-    group = "package"
-    description = "Creates a single modular JAR from non-modular dependencies for jlink."
-
-    delete(mergedJarsDir)
-
-    archiveFileName.set(mergedModuleJarName)
-    destinationDirectory.set(mergedJarsDir)
-
-    // Exclude module-info and signature files to prevent conflicts
-    exclude("module-info.class", "META-INF/*.SF", "META-INF/*.DSA", "META-INF/*.RSA")
-
-    // Get all runtime classpath files
-    val allRuntimeFiles = resolvedRuntimeClasspath
-
-    // Filter external dependencies (exclude project dependencies)
-    val externalDependencies = allRuntimeFiles.filter { file ->
-        // Check if this file is from a subproject
-        !project.subprojects.any { subproject ->
-            val jarTask = subproject.tasks.findByName("jar") as? Jar
-            jarTask?.archiveFile?.get()?.asFile == file
-        }
-    }
-
-    // Filter out modular JARs (we only want to merge non-modular ones)
-    val filesToMerge = externalDependencies.filter { file ->
-        // Exclude known modular JARs
-        !file.name.startsWith("javafx-") &&
-                !file.name.startsWith("HikariCP") &&
-                // Check if it's not already modular
-                !file.isModularJar()
-    }
-
-    // Merge only non-modular JARs
-    from(filesToMerge.map { zipTree(it) }) {
-        // Exclude duplicate service provider configurations
-        exclude("META-INF/services/**")
-    }
-
-    // Specify the module name in manifest
-    manifest {
-        attributes(
-            "Automatic-Module-Name" to "${BuildMeta.MAIN_MODULE}.merged.module",
-            "Multi-Release" to "true"
-        )
-    }
-
-    doLast {
-        println("Merged ${filesToMerge.size} non-modular JARs into: ${archiveFile.get().asFile.name}")
-        filesToMerge.forEach { println("  - ${it.name}") }
-    }
-}
-
-/**
- * 2. Copy Application Modules (For Separate JARs)
- */
-tasks.register<Copy>("copyAppModules") {
-    group = "package"
-    description = "Copies all module JARs (App + Dependencies) to the input directory for jpackage."
-
-    delete(appModulesDir)
-
-    into(appModulesDir)
-
-    // --- Project Modules ---
-    from(subprojects.map { it.tasks.named("jar") })
-
-    // Add the merged module JAR
-    from(tasks.named("createMergedModuleJar"))
-
-    // --- External Dependencies (Modular JARs Only) ---
-    val allRuntimeFiles = configurations.runtimeClasspath.get().files
-    val modularJars = allRuntimeFiles.filter { file ->
-        val fileName = file.name.lowercase()
-
-        // 1. Include only platform-specific JavaFX JARs (e.g., -win.jar)
-        // This *excludes* the generic 'javafx-base-25.0.1.jar' files.
-        val isPlatformSpecificJavaFx = fileName.startsWith("javafx-") && fileName.contains("-win.jar")
-
-        // 2. Include other non-JavaFX modular dependencies (HikariCP, and any other modular JARs)
-        val isOtherModular = fileName.startsWith("hikaricp") || file.isModularJar()
-
-        isPlatformSpecificJavaFx || isOtherModular
-    }
-
-    from(modularJars)
-
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-
-    // Ensure all subproject JARs are built
-    dependsOn(
-        tasks.named("createMergedModuleJar"),
-        ":App:jar",
-        ":Config:jar",
-        ":Gui:jar",
-        ":Logging:jar",
-        ":Persistence:jar",
-        ":Resources:jar",
-        ":Services:jar",
-        ":Utils:jar"
-    )
-
-    doLast {
-        println("Copied modules to: ${destinationDir.absolutePath}")
-        destinationDir.listFiles()?.forEach { println("  - ${it.name}") }
-    }
-}
-
-/**
- * 3. NATIVE JLINK: Creates the minimal runtime image (JRE) - OPTIMIZED FOR FAST STARTUP
- */
-tasks.register<Exec>("createCustomRuntime") {
-    group = "package"
-    description = "Creates a minimal custom JRE optimized for fast startup."
-
-    delete(runtimeImageDir)
-
-    executable = getJvmExecutable("jlink")
-
-    val jmodPath = File(BuildMeta.JDK_LOCATION, "jmods").absolutePath
-
-    // Get JavaFX module JARs from classpath
-    val javafxJars = configurations.runtimeClasspath.get().files
-        .filter {
-            it.name.startsWith("javafx-") && (it.name.contains("-win.jar") || it.name.contains("-linux.jar") || it.name.contains(
-                "-mac.jar"
-            ))
-        }
-        .joinToString(File.pathSeparator) { it.absolutePath }
-
-    // Only include essential Java modules + JavaFX
-    val modules = listOf(
-        "java.base",
-        "java.logging",
-        "java.desktop",
-        "java.sql",
-        "java.naming",
-        "javafx.controls",
-        "javafx.graphics",
-        "javafx.fxml",
-        "jdk.unsupported",
-        "jdk.crypto.ec"
-    ).joinToString(",")
-
-    args(
-        // Include both JDK jmods and JavaFX JARs
-        "--module-path", "$jmodPath${File.pathSeparator}$javafxJars",
-        "--add-modules", modules,
-        "--output", runtimeImageDir.get().asFile.absolutePath,
-
-        // Optimization for FAST STARTUP (trading size for speed)
-        "--no-header-files",
-        "--no-man-pages",
-
-        // Generate optimized code for current platform
-        "--vm", "server"
-    )
-
-    doFirst {
-        println("Creating custom runtime with modules: $modules")
-        println("Optimized for: FAST STARTUP")
-        println("Module path: $jmodPath${File.pathSeparator}$javafxJars")
-    }
-
-    doLast {
-        println("Custom runtime created at: ${runtimeImageDir.get().asFile.absolutePath}")
-        println("\nNote: Runtime optimized for startup speed over size")
-    }
-}
-
-val mainJar = project(":App")
-    .tasks.named("jar", Jar::class.java)
-    .get()
-    .archiveFileName.get()
-
-/**
- * 4. NATIVE JPACKAGE: Creates the final application image.
- */
-tasks.register<Exec>("createJPackageImage") {
-    group = "package"
-    description = "Creates the final application image with separate module JARs."
-
-    dependsOn(tasks.named("createCustomRuntime"))
-    dependsOn(tasks.named("copyAppModules"))
-
-    executable = getJvmExecutable("jpackage")
-
-    val outputDir = BuildMeta.Paths.OUTPUT_IMAGE_DIR
-    val mainModule = BuildMeta.MAIN_MODULE
-    val version = project.version.toString()
-    val appName = "${rootProject.name}_v$version"
-    val appDir = file("$outputDir${File.separator}$appName")
-    delete(appDir)
-    delete(file("$outputDir${File.separator}$appName"))
-
-    val iconPath = listOf(
-        "Resources", "src", "main", "resources", "net", "silver", "resources", "icons", "appIcon.ico"
-    ).joinToString(File.separator)
-
-    val jpackageArgs = mutableListOf(
-        // 1. Application Details
-        "--name", appName,
-        "--app-version", version,
-        "--vendor", "SilverSolutions",
-        "--description", "POS Management Application",
-        "--icon", iconPath,
-
-        // 2. Runtime and Inputs
-        "--runtime-image", runtimeImageDir.get().asFile.absolutePath,
-
-        // Use --input and --main-jar instead of --module-path and --module
-        // This puts all JARs on the classpath instead of module path
-        "--input", appModulesDir.get().asFile.absolutePath,
-        "--main-jar", mainJar,
-        "--main-class", BuildMeta.MAIN_CLASS,
-
-        "--dest", outputDir,
-        "--type", "app-image"
-    )
-
-    // 3. Add JVM Arguments
-    BuildMeta.JVM_ARGS.CURRENT_JVM_ARGS.forEach { jvmArg ->
-        jpackageArgs.add("--java-options")
-        jpackageArgs.add(jvmArg)
-    }
-
-    args(jpackageArgs)
-
-    doFirst {
-        println("Creating JPackage image: $appName")
-        println("Output directory: $outputDir")
-        println("Using classpath mode with main-jar: App-1.0.jar")
-    }
-
-    doLast {
-        println("Application image created at: $appDir")
-
-        // --- Generate correct .cfg file ---
-        val cfgFile = file("$appDir${File.separator}app${File.separator}$appName.cfg")
-        val appJars =
-            appModulesDir.get().asFile.listFiles { f -> f.extension == "jar" }?.sortedBy { it.name } ?: emptyList()
-
-        val classpathString = appJars.joinToString(File.pathSeparator) { "\$APPDIR/${it.name}" }
-
-        cfgFile.writeText(
-            """
-[Application]
-app.mainclass=${BuildMeta.MAIN_CLASS}
-app.classpath=$classpathString
-
-[JavaOptions]
-${BuildMeta.JVM_ARGS.CURRENT_JVM_ARGS.joinToString("\n") { "java-options=$it" }}
-""".trimIndent()
-        )
-        println("✓ Generated correct .cfg file at: ${cfgFile.absolutePath}")
-    }
-}
-
-/**
- * 5a. Generate CDS Archive for Faster Startup (OPTIONAL BUT RECOMMENDED)
- */
-tasks.register<Exec>("generateCDSArchive") {
-    group = "package"
-    description = "Generates Class Data Sharing archive for even faster application startup."
-
-    dependsOn(tasks.named("createJPackageImage"))
-
-    val outputDir = BuildMeta.Paths.OUTPUT_IMAGE_DIR
-    val appName = "${rootProject.name}_v${project.version}"
-    val appDir = file("$outputDir${File.separator}$appName")
-    val runtimeAppDir = file("$outputDir${File.separator}$appName${File.separator}app")
-    val cfgFile = file("$appDir${File.separator}app${File.separator}$appName.cfg")
-    // Dynamically determine java executable path
-    val javaExe = listOf(
-        outputDir,
-        appName,
-        "runtime",
-        "bin",
-        "java${if (System.getProperty("os.name").lowercase().contains("windows")) ".exe" else ""}"
-    ).joinToString(File.separator)
-
-    onlyIf { appDir.exists() && file(javaExe).exists() }
-
-    workingDir = runtimeAppDir
-    executable = javaExe
-
-    // Build classpath from all jars in /app
-    val jarClasspath = runtimeAppDir
-        .listFiles()
-        ?.filter { it.extension == "jar" }
-        ?.joinToString(File.pathSeparator) { it.name }
-        ?: ""
-
-    // Define output streams
-    val stdOut = ByteArrayOutputStream()
-    val errOut = ByteArrayOutputStream()
-
-    // CRITICAL: Assign the output streams to the Exec task properties
-    standardOutput = stdOut
-    errorOutput = errOut
-
-    args(
-        "-Xshare:dump",
-        "-XX:SharedArchiveFile=app-cds.jsa",
-        "-cp", jarClasspath
-    )
-
-    doFirst {
-        println("Generating CDS archive for faster startup...")
-        println("Classpath: $jarClasspath")
-    }
-
-    doLast {
-        println("\n--- CDS Generation Output ---")
-        val output = stdOut.toString() // Read the stream defined above
-        val error = errOut.toString() // Read the stream defined above
-
-        if (output.isNotBlank()) {
-            println("Standard Output:")
-            println(output.trim())
-        }
-
-        if (error.isNotBlank()) {
-            println("!! ERROR Output !!")
-            println(error.trim())
-        }
-
-        // Original verification logic
-        val cdsFile = File(runtimeAppDir, "app-cds.jsa")
-        if (cdsFile.exists()) {
-            cfgFile.appendText(
-                """
-
-java-options=-Xshare:on
-java-options=-XX:SharedArchiveFile=${'$'}APPDIR/app-cds.jsa
-""".trimIndent()
-            )
-            println("✓ CDS archive created: app-cds.jsa (${cdsFile.length() / 1024} KB)")
-        } else {
-            println("✗ CDS archive creation failed — no app-cds.jsa produced")
-        }
-    }
-}
-tasks.register<Copy>("includeCDSInInput") {
-    dependsOn("generateCDSArchive")
-
-    val outputDir = BuildMeta.Paths.OUTPUT_IMAGE_DIR
-    val appName = "${rootProject.name}_v${project.version}"
-    val cdsFile = file("$outputDir${File.separator}$appName${File.separator}app${File.separator}app-cds.jsa")
-
-    from(cdsFile)
-    into(appModulesDir)
-
-    doLast {
-        println("✓ Copied app-cds.jsa into input directory for jpackage")
-    }
-}
-/**
- * 5b. Create Windows Installer (MSI or EXE)
- */
-tasks.register<Exec>("createWindowsInstaller") {
-    group = "package"
-    description = "Creates a Windows installer (MSI) for the application."
-
-    dependsOn(tasks.named("createCustomRuntime"))
-    dependsOn(tasks.named("copyAppModules"))
-    dependsOn(tasks.named("includeCDSInInput"))
-
-    executable = getJvmExecutable("jpackage")
-
-    val outputDir = BuildMeta.Paths.OUTPUT_IMAGE_DIR
-    val version = project.version.toString()
-    val appName = "${rootProject.name}_v$version"
-    val appDirForResources = file("$outputDir${File.separator}$appName${File.separator}app")
-
-    val iconPath = listOf(
-        "Resources", "src", "main", "resources", "net", "silver", "resources", "icons", "appIcon.ico"
-    ).joinToString(File.separator)
-
-    // Combine current JVM args + CDS flags
-    val allJvmArgs = BuildMeta.JVM_ARGS.CURRENT_JVM_ARGS + listOf(
-        "-Xshare:on",
-        "-XX:SharedArchiveFile=\$APPDIR/app-cds.jsa"
-    )
-
-    val jpackageArgs = mutableListOf(
-        "--name", appName,
-        "--app-version", version,
-        "--vendor", "SilverSolutions",
-        "--description", "POS Management Application",
-        "--icon", iconPath,
-        "--resource-dir", appDirForResources.absolutePath,
-        "--runtime-image", runtimeImageDir.get().asFile.absolutePath,
-        "--input", appModulesDir.get().asFile.absolutePath,
-        "--main-class", BuildMeta.MAIN_CLASS,
-        "--main-jar", mainJar,
-        "--dest", outputDir,
-        "--type", "msi",
-
-        "--win-menu",
-        "--win-dir-chooser",
-        "--win-per-user-install",
-        "--win-shortcut",
-        "--install-dir", rootProject.name,
-        "--win-upgrade-uuid", "783f982d-0a12-4e00-84c2-9e9f65c697c1",
-        "--win-menu-group", rootProject.name
-    )
-
-    // Add all JVM options to jpackage
-    allJvmArgs.forEach { jvmArg ->
-        jpackageArgs.add("--java-options")
-        jpackageArgs.add(jvmArg)
-    }
-
-    args(jpackageArgs)
-
-    doLast {
-        // Collect all jars + CDS
-        val appJars =
-            appModulesDir.get().asFile.listFiles { f -> f.extension == "jar" }?.sortedBy { it.name } ?: emptyList()
-        val classpath = (appJars.map { "\$APPDIR\\${it.name}" } + "\$APPDIR\\app-cds.jsa").joinToString(";")
-
-        // Write single-line classpath
-        val appCfgFile = file("$appDirForResources${File.separator}$appName.cfg")
-        appCfgFile.writeText(
-            """
-[Application]
-app.mainclass=${BuildMeta.MAIN_CLASS}
-app.classpath=$classpath
-
-[JavaOptions]
-${allJvmArgs.joinToString("\n") { "java-options=$it" }}
-""".trimIndent()
-        )
-
-        println("Windows installer created at: $outputDir/$appName.msi")
-        println("✓ .cfg file now has SINGLE-LINE classpath including app-cds.jsa")
-    }
-}
-
-
-// =========================================================================
-// == DIAGNOSTIC TASKS =====================================================
-// =========================================================================
-
-/**
- * Analyze module dependencies
- */
-tasks.register("analyzeModuleDependencies") {
-    group = "verification"
-    description = "Analyzes module dependencies using jdeps."
-
-    doLast {
-        println("\n=== Analyzing Module Dependencies ===\n")
-
-        val jdepsExec = getJvmExecutable("jdeps")
-        val modulePath = configurations.runtimeClasspath.get().files
-            .joinToString(File.pathSeparator) { it.absolutePath }
-
-        project.subprojects.forEach { subproject ->
-            val jarTask = subproject.tasks.findByName("jar") as? Jar
-            val jarFile = jarTask?.archiveFile?.get()?.asFile
-
-            if (jarFile != null && jarFile.exists()) {
-                println("Analyzing: ${subproject.name}")
-                try {
-                    val execResult = ProcessBuilder(
-                        jdepsExec,
-                        "--module-path", modulePath,
-                        "-s", jarFile.absolutePath
-                    ).redirectErrorStream(true)
-                        .start()
-
-                    execResult.inputStream.bufferedReader().use { reader ->
-                        reader.lines().forEach { println(it) }
-                    }
-
-                    val exitCode = execResult.waitFor()
-                    if (exitCode != 0) {
-                        println("  Warning: jdeps returned exit code $exitCode")
-                    }
-                } catch (e: Exception) {
-                    println("  Error analyzing: ${e.message}")
-                }
-                println()
-            }
-        }
-    }
-}
-
-/**
- * Verify package structure
- */
-tasks.register("verifyPackageStructure") {
-    group = "verification"
-    description = "Verifies the created package structure and launcher configuration."
-
-    doLast {
-        val outputDir = BuildMeta.Paths.OUTPUT_IMAGE_DIR
-        val appName = "${rootProject.name}_v${project.version}"
-        val appDir = file("$outputDir${File.separator}$appName")
-
-        if (!appDir.exists()) {
-            println("ERROR: Application directory does not exist: ${appDir.absolutePath}")
-            return@doLast
-        }
-
-        println("\n=== Package Structure ===")
-        println("Application directory: ${appDir.absolutePath}")
-        println("\nRoot contents:")
-        appDir.listFiles()?.forEach {
-            println("  ${if (it.isDirectory) "[DIR]" else "[FILE]"} ${it.name}")
-        }
-
-        // Check launcher in root
-        val launcherName =
-            "$appName${if (System.getProperty("os.name").lowercase().contains("windows")) ".exe" else ""}"
-        val launcherExe = file("$appDir${File.separator}$launcherName")
-        if (launcherExe.exists()) {
-            println("\n✓ Launcher found: ${launcherExe.name}")
-        } else {
-            println("\n✗ Launcher not found: $launcherName")
-        }
-
-        // Check app directory contents
-        val appSubDir = file("$appDir${File.separator}app")
-        if (appSubDir.exists()) {
-            println("\n✓ App directory exists")
-            println("Contents:")
-            appSubDir.listFiles()?.forEach { println("  - ${it.name}") }
-        } else {
-            println("\n✗ App directory not found")
-        }
-
-        // Check runtime
-        val runtimeDir = file("$appDir${File.separator}runtime")
-        if (runtimeDir.exists()) {
-            println("\n✓ Runtime directory exists")
-        } else {
-            println("\n✗ Runtime directory not found")
-        }
-
-        // Check for cfg file
-        val appCfg = file("$appDir${File.separator}app${File.separator}$appName.cfg")
-        if (appCfg.exists()) {
-            println("\n✓ Configuration file found: ${appCfg.name}")
-            println("Contents:")
-            appCfg.readLines().forEach { println("  $it") }
-        } else {
-            println("\n✗ Configuration file not found")
-        }
-
-        // Check for CDS archive
-        val cdsFile = file("$appDir${File.separator}app${File.separator}app-cds.jsa")
-        if (cdsFile.exists()) {
-            println("\n✓ CDS archive found: ${cdsFile.name} (${cdsFile.length() / 1024}KB)")
-        } else {
-            println("\n✗ CDS archive not found (run 'gradlew generateCDSArchive' to create)")
-        }
-
-        println("\n=== Launch Instructions ===")
-        println("To run the application:")
-        println("  ${appDir.absolutePath}${File.separator}$launcherName")
-    }
-}
-
-/**
- * List all runtime dependencies
- */
-tasks.register("listRuntimeDependencies") {
-    group = "help"
-    description = "Lists all runtime dependencies."
-
-    doLast {
-        println("\n=== Runtime Dependencies ===\n")
-
-        configurations.runtimeClasspath.get().files
-            .sortedBy { it.name }
-            .forEach { file ->
-                val isModular = file.isModularJar()
-                val marker = if (isModular) "[MODULAR]" else "[NON-MOD]"
-
-                // Try to extract module name if modular
-                var moduleName = ""
-                if (isModular) {
-                    try {
-                        val jarExec = getJvmExecutable("jar")
-                        val process = ProcessBuilder(jarExec, "--describe-module", "--file", file.absolutePath)
-                            .redirectErrorStream(true)
-                            .start()
-
-                        val output = process.inputStream.bufferedReader().use { it.readText() }
-                        process.waitFor()
-
-                        // Extract module name from output (first line usually contains it)
-                        val lines = output.lines()
-                        if (lines.isNotEmpty()) {
-                            val firstLine = lines[0].trim()
-                            if (firstLine.contains("@")) {
-                                moduleName = " -> " + firstLine.substringBefore("@")
-                            } else {
-                                moduleName = " -> $firstLine"
-                            }
-                        }
-                    } catch (e: Exception) {
-                        // Ignore errors
-                    }
-                }
-
-                println("$marker ${file.name}$moduleName")
-            }
-    }
-}
-
-// =========================================================================
-// == REMAINING TASKS (Standard) ===========================================
-// =========================================================================
 
 tasks.named<JavaCompile>("compileTestJava") {
     modularity.inferModulePath.set(true)
     options.encoding = "UTF-8"
 }
-
 tasks.test {
     useJUnitPlatform()
-    modularity.inferModulePath.set(true)
+    modularity.inferModulePath.set(true) // Run tests on module path
     failOnNoDiscoveredTests = false
     testLogging {
         events("passed", "skipped", "failed")
         exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
-        showStandardStreams = false
     }
+}
+
+
+
+tasks.register<Exec>("dumbDatabase") {
+    group = "[ivan]"
+    // Set the executable to the Windows command processor
+    executable = "cmd.exe"
+    workingDir = project.rootDir
+    // The arguments:
+    // 1. /c : Tells cmd.exe to execute the command string and then terminate.
+    // 2. The path to your batch file (e.g., located in the project root).
+    args("/c", "mysqlDump_dumpDatabase.bat")
+}
+tasks.register<Exec>("importNewestDatabaseBackup") {
+    group = "[ivan]"
+    // Set the executable to the Windows command processor
+    executable = "cmd.exe"
+    workingDir = project.rootDir
+    // The arguments:
+    // 1. /c : Tells cmd.exe to execute the command string and then terminate.
+    // 2. The path to your batch file (e.g., located in the project root).
+    args("/c", "mysql_ImportNewestDatabaseBackup.bat")
+}
+tasks.register<Exec>("viewNewestDatabaseBackupFile") {
+    group = "[ivan]"
+    // Set the executable to the Windows command processor
+    executable = "cmd.exe"
+    workingDir = project.rootDir
+    // The arguments:
+    // 1. /c : Tells cmd.exe to execute the command string and then terminate.
+    // 2. The path to your batch file (e.g., located in the project root).
+    args("/c", "mysql_ViewNewestDatabaseBackup.bat")
 }
 
 tasks.compileJava {
     options.isIncremental = true
     options.isFork = true
     options.isFailOnError = true
+//    options.forkOptions.executable = file("$jdkLocation/bin/javac.exe").absolutePath
     options.isVerbose = false
     options.release.set(BuildMeta.JAVA_VERSION)
     options.encoding = BuildMeta.ENCODING
-    options.compilerArgs.addAll(
-        listOf(
-            "-Xlint:unchecked",
-            "-Xlint:deprecation"
-        )
-    )
+//    options.compilerArgs.add("-Xlint:all")
+    options.compilerArgs.add("-Xlint:unchecked")
+
 }
 
-application {
-    mainClass.set(BuildMeta.MAIN_CLASS)
-    mainModule.set(BuildMeta.MAIN_MODULE)
-    applicationDefaultJvmArgs = BuildMeta.JVM_ARGS.CURRENT_JVM_ARGS
+tasks.named<org.beryx.jlink.JlinkTask>("jlink") {
+    dependsOn(tasks.named("jar"))
 }
-
-tasks.named<JavaExec>("run") {
-    mainClass.set(BuildMeta.MAIN_CLASS)
-    jvmArgs = BuildMeta.JVM_ARGS.CURRENT_JVM_ARGS
-}
-
-// =========================================================================
-// == DATABASE MANAGEMENT TASKS ============================================
-// =========================================================================
-
-tasks.register<Exec>("dumpDatabase") {
-    group = "database"
-    description = "Dumps the MySQL database to a backup file."
-
-    executable = "cmd.exe"
-    workingDir = project.rootDir
-    args("/c", "mysqlDump_dumpDatabase.bat")
-}
-
-tasks.register<Exec>("importNewestDatabaseBackup") {
-    group = "database"
-    description = "Imports the newest database backup."
-
-    executable = "cmd.exe"
-    workingDir = project.rootDir
-    args("/c", "mysql_ImportNewestDatabaseBackup.bat")
-}
-
-tasks.register<Exec>("viewNewestDatabaseBackupFile") {
-    group = "database"
-    description = "Opens the newest database backup file."
-
-    executable = "cmd.exe"
-    workingDir = project.rootDir
-    args("/c", "mysql_ViewNewestDatabaseBackup.bat")
-}
-
-// =========================================================================
-// == BUILD LIFECYCLE CUSTOMIZATION ========================================
-// =========================================================================
-
-// Ensure clean deletes custom directories
-tasks.clean {
-    delete(runtimeImageDir)
-    delete(appModulesDir)
-    delete(mergedJarsDir)
-}
-
-// Create a convenience task for full packaging
-tasks.register("packageComplete") {
-    group = "package"
-    description = "Creates complete application package (runtime + image)."
-
-    dependsOn(tasks.named("createJPackageImage"))
-
-    doLast {
-        println("\n=== Packaging Complete ===")
-        println("Application image: ${BuildMeta.Paths.OUTPUT_IMAGE_DIR}${File.separator}${rootProject.name}_v${project.version}")
-        println("\nOptional optimizations:")
-        println("- Run 'gradlew generateCDSArchive' for 30-50% faster startup")
-        println("- Run 'gradlew createWindowsInstaller' to create MSI installer")
-    }
-}
-
-// Create a convenience task for optimized package with CDS
-tasks.register("packageOptimized") {
-    group = "package"
-    description = "Creates optimized package with CDS archive for fastest startup."
-
-    dependsOn(tasks.named("createJPackageImage"))
-    dependsOn(tasks.named("generateCDSArchive"))
-
-    doLast {
-        println("\n=== Optimized Packaging Complete ===")
-        println("Application image: ${BuildMeta.Paths.OUTPUT_IMAGE_DIR}${File.separator}${rootProject.name}_v${project.version}")
-        println("✓ Startup optimized: No compression + CDS archive")
-        println("✓ Expected startup improvement: 30-50% faster")
-        println("\nTo create installer, run: gradlew createWindowsInstaller")
-    }
-}
-//4. All Features
-//
-//✅ Fast startup (no compression)
-//✅ CDS archive support
-//✅ MSI installer creation
-//✅ Diagnostic tasks
-//✅ Database management
-//✅ Module analysis
-//
-//Run gradlew packageOptimized to get the absolute fastest startup time! 🎯
-//================================================================================
-//🚀 Startup Optimization Features:
-//1. JLink Optimizations
-//
-//No compression (faster loading)
-//Keeps debug info (better JIT optimization)
-//Server VM mode (optimized runtime)
-//
-//2. CDS (Class Data Sharing) Support
-//
-//Pre-loads and optimizes classes
-//30-50% faster startup
-//Automatic cfg file update
-//
-//3. Two Build Modes
-//Standard Build:
-//bashgradlew packageComplete
-//Optimized Build (FASTEST):
-//bashgradlew packageOptimized
-//Create Installer:
-//bashgradlew createWindowsInstaller
-//================================================================================
